Edit descriptions and add subtitles

--- a/src/content/technotes/TN0011-response-cache-eviction.mdx
+++ b/src/content/technotes/TN0011-response-cache-eviction.mdx
@@ -1,6 +1,7 @@
 ---
 title: Response cache eviction
-description: The Full Response Cache plugin supports advanced cache eviction patterns via custom cache keys in versions 3.7.0 and later. This enables you to set a longer default TTL and increase the cache's hit rate, because you can selectively evict cached responses when relevant events occur.
+subtitle: Advanced cache eviction patterns using custom cache keys
+description: Use advanced cache eviction patterns with custom cache keys to selectively evict cached responses when relevant events occur.
 published: 2022-08-10
 id: TN0010
 tags: [server, caching, performance]
