--- a/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
+++ b/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
@@ -1,6 +1,7 @@
 ---
 title: Namespacing by separation of concerns
-description: To improve the logical organization of our graph's capabilities, we can define namespaces for our root-level operation fields. These are object types that in turn define query and mutation fields that are all related to a particular concern.
+subtitle: Organize root-level operation fields into namespaces
+description: Organize root-level operation fields into namespaces to improve the logical structure to your GraphQL schema.
 published: 2022-08-31
 id: TN0012
 tags: [schema-design]
