--- a/src/content/technotes/TN0013-monolith-to-federation.mdx
+++ b/src/content/technotes/TN0013-monolith-to-federation.mdx
@@ -1,6 +1,7 @@
 ---
 title: Moving a GraphQL monolith to Apollo Federation
-description: Steps for migrating from a GraphQL monolith to multiple subgraphs with Apollo Federation
+subtitle: Steps for migrating from a GraphQL monolith to a federated supergraph
+description: A step-by-step guide for migrating from a GraphQL monolith to a federated supergraph with Apollo Federation.
 published: 2022-09-06
 id: TN0013
 tags: [federation, server]
