--- a/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
+++ b/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
@@ -1,6 +1,7 @@
 ---
 title: Sending Apollo Router traces and metrics to APM tools using OpenTelemetry
-description: Application performance monitoring (APM) tools are critical for many organizations, and having direct insight into how your graph is performing is an important piece of overall observability into your systems' stability and performance.
+subtitle: Gain insight into your graph's performance and stability
+description: Sending Apollo Router traces and metrics to APM tools to gain insight into your graph's performance and stability.
 published: 2022-10-27
 id: TN0015
 tags: [observability, router]
