--- a/src/content/technotes/TN0016-router-resource-management.mdx
+++ b/src/content/technotes/TN0016-router-resource-management.mdx
@@ -1,6 +1,7 @@
 ---
 title: Managing Apollo Router resources in Kubernetes
-description: Determining the correct resource requests and limits for your application pods in a Kubernetes system is not an exact science. Your specific needs depend on many factors.
+subtitle: Recommendations and considerations for application pods
+description: Recommendations and considerations for determining the correct resource requests and limits for application pods in a Kubernetes system.
 published: 2022-10-31
 id: TN0016
 tags: [router, kubernetes]
