--- a/src/content/technotes/TN0018-aggregating-across-subgraphs.mdx
+++ b/src/content/technotes/TN0018-aggregating-across-subgraphs.mdx
@@ -1,6 +1,7 @@
 ---
 title: Aggregating data across subgraphs
-description: A supergraph helps you orchestrate data fetches across multiple domains, however it doesn't automatically solve some commonly encountered problems in distributed architectures.
+subtitle: If product requirements don't align with a single domain, it may suggest the need for a new domain
+description: If product requirements don't align with a single domain, it may suggest the need for a new domain or subgraph.
 published: 2022-11-03
 id: TN0018
 tags: [federation]
