--- a/src/content/technotes/TN0020-mocked-gateway-for-client-development.mdx
+++ b/src/content/technotes/TN0020-mocked-gateway-for-client-development.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Mocking graph functionality to unblock client development"
-description: As your organization builds out its supergraph, you can mock parts of your supergraph as you develop both your clients and subgraphs, enabling teams to work in parallel without blocking each other.
+title: Mocking graph functionality to unblock client development
+subtitle: Enable teams to work in parallel without blocking each other
+description: Mock parts of your supergraph as you develop both your subgraphs and clients to enable teams to work in parallel without blocking each other.
 published: 2022-11-17
 id: TN0020
 tags: [gateway, schema-design, federation]
