--- a/src/content/technotes/TN0021-graph-security.mdx
+++ b/src/content/technotes/TN0021-graph-security.mdx
@@ -1,6 +1,7 @@
 ---
 title: Securing supergraphs
-description: Best practices for securing federated GraphQL APIs
+subtitle: Best practices for securing federated GraphQL APIs
+description: Best practices for securing federated GraphQL APIs, including limiting discoverability, error obfuscation, query depth limits, and more.
 published: 2022-12-08
 id: TN0021
 tags: [security, federation]
