--- a/src/content/technotes/TN0022-graphql-adoption-patterns.mdx
+++ b/src/content/technotes/TN0022-graphql-adoption-patterns.mdx
@@ -1,6 +1,7 @@
 ---
 title: GraphQL adoption patterns
-description: When developers begin to experiment with GraphQL, they often begin with a foundational architecture where a client application queries a single GraphQL server.
+subtitle: Adoption patterns, anti-patterns, shortcomings, and solutions
+description: Learn shortcomings and solutions for GraphQL adoption patterns and anti-patterns, including monoliths, BFFs.queries a single GraphQL server.
 published: 2023-01-09
 id: TN0022
 tags: [federation]
