--- a/src/content/technotes/TN0023-nullability.mdx
+++ b/src/content/technotes/TN0023-nullability.mdx
@@ -1,6 +1,7 @@
 ---
 title: Nullability
-description: All fields in GraphQL are nullable by default and it's often best to err on the side of embracing that default behavior as new fields are initially added to a schema.
+subtitle: Learn how to make intentional choices about nullability
+description: Weigh the implications of choices about nullability for every GraphQL type, field, and argument in a schema.
 published: 2023-01-09
 id: TN0023
 tags: [schema-design, federation]
