--- a/src/content/technotes/TN0024-deprecations.mdx
+++ b/src/content/technotes/TN0024-deprecations.mdx
@@ -1,6 +1,7 @@
 ---
 title: Schema deprecations
-description: Your graph governance group should outline a company-wide field rollover strategy to gracefully handle type and field deprecations throughout the unified graph.
+subtitle: Gracefully manage type and field deprecations
+description: Gracefully manage GraphQL type and field deprecations by using field metrics and the @deprecated type system directive.
 published: 2023-01-09
 id: TN0024
 tags: [schema-design]
