--- a/src/content/technotes/TN0027-demand-oriented-schema-design.mdx
+++ b/src/content/technotes/TN0027-demand-oriented-schema-design.mdx
@@ -1,6 +1,7 @@
 ---
 title: Demand oriented schema design
-description: To best support the client applications that consume data from our federated graph, we must intentionally design schemas in an abstract, demand-oriented way.
+subtitle: Best practices for demand oriented schema design
+description: Support GraphQL client applications that consume data from our federated graph by designing schemas in an abstract, demand-oriented way.
 published: 2023-01-09
 id: TN0027
 tags: [federation, schema-design]
