--- a/src/content/technotes/TN0030-optimizing-router-builds.mdx
+++ b/src/content/technotes/TN0030-optimizing-router-builds.mdx
@@ -1,5 +1,5 @@
 ---
-title: Optimizing Custom Apollo Router Builds
+title: Optimizing custom Apollo Router builds
 description: While running the Apollo Router in production has great performance, this comes at the cost of increased build time and higher system requirements when compiling from source.
 published: 2023-01-19
 id: TN0030
