--- a/src/content/technotes/TN0033-sdui-schema-design.mdx
+++ b/src/content/technotes/TN0033-sdui-schema-design.mdx
@@ -1,6 +1,7 @@
 ---
 title: Server-driven UI schema design
-description: Using enums, contracts, and interfaces to implement Server-driven UI (SDUI).
+subtitle: Use enums, contracts, and interfaces to implement SDUI
+description: Explore SDUI UI patterns to structure your graph's schema for encoding and representing UI elements, using enums, contracts, and interfaces.
 published: 2023-01-30
 id: TN0033
 tags: [schema-design, server-driven-ui]
