--- a/src/content/technotes/TN0034-react-context.mdx
+++ b/src/content/technotes/TN0034-react-context.mdx
@@ -1,5 +1,6 @@
 ---
 title: React Context with Apollo Client
+subtitle: Avoiding props-drilling by making data accessible through a React Hook
 description: Avoiding props-drilling by making data accessible through a React Hook, which can be called anywhere in the nested component tree.
 published: 2023-01-30
 id: TN0034
