--- a/src/content/technotes/TN0035-load-testing-graphql.mdx
+++ b/src/content/technotes/TN0035-load-testing-graphql.mdx
@@ -1,6 +1,7 @@
 ---
 title: Load testing a federated GraphQL API
-description: However, there are certain distinctions specific to GraphQL and the Apollo ecosystem that are worth considering before conducting a load test.
+subtitle: Considerations for load testing with GraphQL
+description: Considerations for load testing with GraphQL in the Apollo ecosystem.
 published: 2023-02-01
 id: TN0035
 tags: [testing, performance]
