--- a/src/content/technotes/TN0037-api-gateways.mdx
+++ b/src/content/technotes/TN0037-api-gateways.mdx
@@ -1,6 +1,7 @@
 ---
 title: Does Apollo Router replace my API gateway?
-description: The key distinction of the Router is that is not based on URLs or REST endpoints; Apollo Router is a GraphQL-native solution to handle your clients API operations.
+subtitle: How the Apollo Router differs from API gateways
+description: The Apollo Router isn't based on URLs or REST endpoints, its a GraphQL-native solution to handle your clients API operations.
 published: 2023-03-31
 id: TN0037
 tags: [federation, router, gateway]
