--- a/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
+++ b/src/content/technotes/TN0039-debugging-subgraph-requests.mdx
@@ -1,6 +1,7 @@
 ---
-title: Debugging subgraph requests from Apollo Router or @apollo/gateway
-description: As your graph grows, you may need to debug a problematic query for one reason or another. The Apollo Router and @apollo/gateway both serve as an entry point into your federated graph and offer ways to debug requests.
+title: Debugging subgraph requests from the Apollo Router or @apollo/gateway
+subtitle: Log query plans and subgraph calls to help debug problematic queries
+description: Log query plans and subgraph calls with the Apollo Router and @apollo/gateway to help debug problematic queries.
 published: 2023-04-13
 id: TN0039
 tags: [federation, gateway, router, subgraphs]
