--- a/src/content/technotes/TN0040-federation-is-not-a-saga-orchestrator.mdx
+++ b/src/content/technotes/TN0040-federation-is-not-a-saga-orchestrator.mdx
@@ -1,6 +1,7 @@
 ---
 title: Federation is not a saga orchestrator
-description: Federation applies orchestration capabilities to mutation fields (and their selection sets), but managing state changes across distributed systems typically involves additional requirements.
+subtitle: Considerations for sequencing mutations and distributed orchestration
+description: Federation orchestrates mutation fields but additional considerations are necessary when handling state changes across distributed systems.
 published: 2023-04-20
 id: TN0040
 tags: [federation]
