--- a/src/content/technotes/TN0041-errors-as-data-explained.mdx
+++ b/src/content/technotes/TN0041-errors-as-data-explained.mdx
@@ -1,6 +1,7 @@
 ---
 title: Errors as Data explained
-description: Union types in GraphQL are an excellent way to represent multiple types of data in a single field. This can be extremely useful when dealing with different types of responses, such as success and error cases.
+subtitle: Use unions types to represent different response scenarios
+description: Union types can represent multiple types of data in a single field and can help you handle GraphQL responses with clarity and flexibility.
 published: 2023-06-22
 id: TN0041
 tags: [schema-design]
