--- a/src/content/technotes/TN0017-interfaces.mdx
+++ b/src/content/technotes/TN0017-interfaces.mdx
@@ -1,6 +1,7 @@
 ---
 title: Recommended usage for GraphQL interfaces
-description: GraphQL interfaces enable schema fields to return one of multiple object types, all of which must implement that interface.
+subtitle: Explore examples and avoid common pitfalls
+description: Interfaces enable schema fields to return one of multiple object types. Explore examples and avoid common pitfalls in using interfaces.
 published: 2022-10-31
 id: TN0017
 tags: [schema-design, federation]
