--- a/src/content/technotes/TN0026-thinking-in-entities.mdx
+++ b/src/content/technotes/TN0026-thinking-in-entities.mdx
@@ -1,6 +1,7 @@
 ---
 title: Thinking in entities
-description: Entities are the core building blocks of a federated graph, so the adoption of any schema design best practice must be approached with the unique role of entities in mind.
+subtitle: Best practices for designing your schema with entities
+description: Schema design best practices for entities, including when to define, reference and extend entities.
 published: 2023-01-09
 id: TN0026
 tags: [federation, schema-design]
@@ -14,11 +15,9 @@ Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enter
 
 </Tip>
 
-## Thinking entities
-
 [Entities](/federation/entities/) are the core building blocks of a federated graph, so the adoption of any schema design best practice must be approached with the unique role of entities in mind. While there's no requirement for subgraphs to define any entities at all with Apollo Federation, the federated schema design process often begins by thinking about what the initial entity types will be and how they will be referenced and extended throughout the graph to help preserve the separation of concerns between subgraphs both today and as the graph evolves in the future.
 
-### Define, reference, and extend entities as needed
+## Define, reference, and extend entities as needed
 
 The [Apollo Federation specification](/federation/subgraph-spec/) indicates that an Object or Interface type can be made into an entity by adding the `@key` directive to its definition in a subgraph schema. The `@key` directive defines a **primary key** for the entity and its `fields` argument will contain one or more of the type's fields. In the following example, the `Product` entity's primary key would be its `upc` field:
 
@@ -63,7 +62,7 @@ type Product @key(fields: "upc") {
 
 When extending entities, it's important to keep in mind that **the entity's originating subgraph will not be aware of the added fields**. Additionally, each field in an entity must only be defined once or the gateway will encounter schema composition errors.
 
-### Work from the entities outward
+## Work from the entities outward
 
 When migrating from a client-only or monolithic GraphQL pattern, that work begins by identifying what entities will be exposed in the first subgraph extracted from the larger schema. When migrating from an architecture consisting of BFF-based GraphQL APIs or any other architecture of multiple overlapping graphs, the work of identifying entities (and determining new subgraph boundaries, in general) might be a bit more complex and involve some degree of negotiation with respect to type ownership, as well as a migration process to help account for any breaking changes that might result for clients.
 
@@ -71,6 +70,6 @@ Whatever your architectural starting point, Apollo Federation was designed to al
 
 For more information on entity usage and capabilities, please see the [Entities documentation page](/federation/entities/).
 
-### `@defer` and entities
+## `@defer` and entities
 
 Entities aren't just useful for connecting data across subgraphs. You can also use entities to enable the new [`@defer` directive for client-controlled prioritization of response data](https://github.com/graphql/graphql-wg/blob/main/rfcs/DeferStream.md). The Apollo Router can [defer resolution of fields in entities](/router/executing-operations/defer-support) (and root fields) and handle sending data back to the client in prioritized chunks. By defining types as entities within your graph, clients can improve perceived user experience by adding a directive to their operations.
