--- a/src/content/technotes/TN0029-relay-style-connections.mdx
+++ b/src/content/technotes/TN0029-relay-style-connections.mdx
@@ -1,6 +1,7 @@
 ---
 title: Relay-style connections and pagination FAQ
-description: Relay is an opinionated GraphQL client, and its associated Connections specification defines a pattern for expressing one-to-many relationships in a GraphQL schema.
+subtitle: Common questions around Relay's Connection specification
+description: Common questions around Relay's Connections specification and how to use it wih Apollo Federation.
 published: 2023-01-17
 id: TN0029
 tags: [best-practices, schema-design]
