--- a/src/content/technotes/TN0036-owner-pattern.mdx
+++ b/src/content/technotes/TN0036-owner-pattern.mdx
@@ -1,6 +1,7 @@
 ---
 title: Enforcing entity ownership in Apollo Federation
-description: In some situations you still might want to designate an "owner" of an entity and make "entity extension" a first-class concept in your supergraph.
+subtitle: Designating entity ownership in Apollo Federation 2
+description: Learn how to designate an entity ownership and make "entity extension" a first-class concept in your Apollo Federation 2 supergraph.
 published: 2023-02-16
 id: TN0036
 tags: [federation]
