--- a/src/content/technotes/TN0045-router_resource_estimator.mdx
+++ b/src/content/technotes/TN0045-router_resource_estimator.mdx
@@ -1,6 +1,7 @@
 ---
 title: Router resource estimator
-description: The router resource estimator estimates the system resources you need to allocate for the Apollo Router to run production traffic.
+subtitle: Estimate the system resources to allocate for the Apollo Router
+description: Estimate the system resources you need to allocate for the Apollo Router to run production traffic.
 published: 2023-12-15
 id: TN0045
 toc: false
