--- a/src/content/technotes/TN0046-managing-graph-environments-using-variants.mdx
+++ b/src/content/technotes/TN0046-managing-graph-environments-using-variants.mdx
@@ -1,6 +1,7 @@
 ---
-title: Managing Graph Environments using Variants
-description: Learn CI/CD best practices and examples for using graph variants for multiple deployment environments.
+title: Managing graph environments using variants
+subtitle: Best practices and examples when using graph variants for multiple deployment environments
+description: Learn CI/CD best practices and examples when using graph variants for multiple deployment environments.
 published: 2023-12-22
 id: TN0046
 tags: [federation]
