--- a/src/content/technotes/TN0009-gateway-performance.mdx
+++ b/src/content/technotes/TN0009-gateway-performance.mdx
@@ -1,7 +1,7 @@
 ---
 title: Improving gateway performance
 subtitle: Learn to adjust tracing, instrument middleware and plugins, and more
-description: If your supergraph gateway uses Apollo Server with the @apollo/gateway library, this article provides recommendations for improving your gateway's performance.
+description: Recommendations for improving your gateway's performance when using Apollo Server with the @apollo/gateway library.
 published: 2022-07-28
 id: TN0009
 tags: [gateway, performance]
