--- a/src/content/technotes/TN0019-federation-n-plus-1.mdx
+++ b/src/content/technotes/TN0019-federation-n-plus-1.mdx
@@ -1,6 +1,6 @@
 ---
 title: How Federation handles the N+1 query problem
-description: Learn how to handle the N+1 problem for operations that return a list in a federated graph
+subtitle: Learn how to handle the N+1 problem for operations that return a list in a federated graph
 description: Learn how to handle the "N+1 query problem" for operations that return a list in a federated graph.
 published: 2022-11-15
 id: TN0019
