--- a/src/content/technotes/TN0030-optimizing-router-builds.mdx
+++ b/src/content/technotes/TN0030-optimizing-router-builds.mdx
@@ -1,6 +1,7 @@
 ---
 title: Optimizing custom Apollo Router builds
-description: While running the Apollo Router in production has great performance, this comes at the cost of increased build time and higher system requirements when compiling from source.
+subtitle: Enhance performance, minimize build time, and address system requirements
+description: Recommendations and considerations for minimizing build time when using custom Apollo Router builds.
 published: 2023-01-19
 id: TN0030
 tags: [router]
