--- a/src/content/technotes/TN0042-sdui-client-design.mdx
+++ b/src/content/technotes/TN0042-sdui-client-design.mdx
@@ -1,7 +1,7 @@
 ---
 title: Server-driven UI client design
-subtitle: Incrementally adopt SDUI to simplify client logic
-description: In server-driven UI (SDUI), the client's goal is to handle pixels, not data. The client should simply take what the API provides and render it in the proper location.
+subtitle: Use a component registry and design systems and tokens to simplify client logic
+description: Use a component registry and design systems and tokens to simplify client logic with SDUI.
 published: 2023-10-09
 id: TN0042
 tags: [client, server-driven-ui]
