--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -26,16 +26,18 @@ import {
 
 <DocsetGrid>
   <Docset
-    title="Advantages of GraphQL"
+    icon={DOCSET_ICONS.graphql}
+    title="Benefits of GraphQL"
     description="Understand how GraphQL and Apollo can help you improve your organization's developer experience and ship features faster."
     path="/intro/benefits"
     cta="Explore the benefits of GraphQL"
   />
   <Docset
+    icon={DOCSET_ICONS.graphos}
     title="Introducing GraphOS"
     description="Connect any GraphQL API to Apollo's cloud platform to enable powerful features like schema validation and metrics reporting."
     path="/graphos"
-    cta="Learn what GraphOS offers"
+    cta="Learn about GraphOS"
   />
 </DocsetGrid>
 
@@ -58,13 +60,13 @@ Apollo provides tools and resources for every developer that interacts with Grap
   <Docset
     icon={DOCSET_ICONS.router}
     title="Apollo Router"
-    description="Deploy your supergraph's router in your own infrastructure and configure it to meet advanced enterprise requirements."
+    description="Deploy and configure your supergraph's router in your own infrastructure."
     path="/router"
   />
   <Docset
     icon={DOCSET_ICONS.technotes}
     title="Tech Notes"
-    description="Read in-depth articles on specialized Apollo topics."
+    description="Read in-depth articles on specialized Apollo topics from our own solutions architects."
     path="/technotes"
     cta="Browse tech notes"
   />
