Use use-case language

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -35,7 +35,7 @@ import {
   <Docset
     icon={DOCSET_ICONS.graphos}
     title="Introducing GraphOS"
-    description="Connect any GraphQL API to Apollo's cloud platform to enable powerful features like schema validation and metrics reporting."
+    description="Connect any GraphQL API to Apollo's cloud platform to enable powerful features like schema governance and metrics reporting."
     path="/graphos"
     cta="Learn about GraphOS"
   />
@@ -52,28 +52,29 @@ Apollo provides tools and resources for every developer that interacts with Grap
 <DocsetGrid>
   <Docset
     icon={DOCSET_ICONS.federation}
-    title="Apollo Federation"
-    description="Implement a single, unified supergraph that combines multiple GraphQL APIs."
+    title="Combine APIs"
+    description="Implement a single, unified supergraph that combines multiple GraphQL APIs with Apollo Federation."
     path="/federation"
-    cta={CTA_LEARN}
+    cta="Learn about Apollo Federation"
   />
   <Docset
     icon={DOCSET_ICONS.router}
-    title="Apollo Router"
+    title="Host your own router"
     description="Deploy and configure your supergraph's router in your own infrastructure."
     path="/router"
+    cta="Explore the Apollo Router"
   />
   <Docset
     icon={DOCSET_ICONS.technotes}
-    title="Tech Notes"
+    title="Learn from the field"
     description="Read in-depth articles on specialized Apollo topics from our own solutions architects."
     path="/technotes"
     cta="Browse tech notes"
   />
   <Docset
     icon={DOCSET_ICONS.principled}
-    title="Principled GraphQL"
-    description="Read about the fundamental principles that underlie Apollo's supergraph architecture."
+    title="Master principles"
+    description="Learn about the fundamental principles that underlie Apollo's supergraph architecture."
     path="https://principledgraphql.com/"
     cta="Visit Principled GraphQL"
   />
@@ -84,15 +85,17 @@ Apollo provides tools and resources for every developer that interacts with Grap
 <DocsetGrid>
   <Docset
     icon={DOCSET_ICONS['apollo-server']}
-    title="Apollo Server"
-    description="Build a production-ready GraphQL API in Node.js. Fetch and combine results from multiple data sources."
+    title="Build a GraphQL API"
+    description="Build a production-ready GraphQL API in Node.js with Apollo Server. Fetch and combine results from multiple data sources."
     path="/apollo-server"
+    cta="Explore Apollo Server docs"
   />
   <Docset
     icon={DOCSET_ICONS.rover}
-    title="Rover CLI"
-    description="Manage your GraphOS graphs and their schemas from the command line."
+    title="Manage via CLI"
+    description="Manage, configure, and publish your GraphOS graphs and their schemas from the command line with the Rover CLI."
     path="/rover"
+    cta="Explore Rover CLI docs"
   />
 </DocsetGrid>
 
