--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -7,7 +7,6 @@ description: Learn how Apollo GraphQL can help enterprise architects, API implem
 
 import {ButtonGroup, VStack} from '@chakra-ui/react';
 import {
-  CTA_LEARN,
   CommunityButton,
   Docset,
   DocsetGrid,
@@ -41,7 +40,7 @@ import {
   />
 </DocsetGrid>
 
-Apollo provides tools and resources for every developer that interacts with GraphQL—whether you're just [getting started with GraphQL](#for-graphql-newcomers) or [moving your entire organization onto the supergraph](#for-enterprise-architects), [building your first API](#for-api-implementers) or [querying an existing one](#for-client-developers).
+Apollo provides tools and resources for every developer that interacts with GraphQL. That's whether you're just [getting started with GraphQL](#for-graphql-newcomers) or [moving your entire organization onto the supergraph](#for-enterprise-architects), [building your first API](#for-api-implementers) or [querying an existing one](#for-client-developers).
 
 ## For GraphQL newcomers
 
