--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -40,7 +40,7 @@ import {
   />
 </DocsetGrid>
 
-Apollo provides tools and resources for every developer that interacts with GraphQL. That's whether you're just [getting started with GraphQL](#for-graphql-newcomers) or [moving your entire organization onto the supergraph](#for-enterprise-architects), [building your first API](#for-api-implementers) or [querying an existing one](#for-client-developers).
+Apollo provides tools and resources for every developer who interacts with GraphQL. That's whether you're just [starting with GraphQL](#for-graphql-newcomers), [moving your entire organization onto the supergraph](#for-enterprise-architects), [building your first API](#for-api-implementers), or [querying an existing one](#for-client-developers).
 
 ## For GraphQL newcomers
 
@@ -52,13 +52,13 @@ Apollo provides tools and resources for every developer that interacts with Grap
   <Docset
     icon={DOCSET_ICONS.federation}
     title="Combine APIs"
-    description="Implement a single, unified supergraph that combines multiple GraphQL APIs with Apollo Federation."
+    description="Implement a single, unified supergraph that combines multiple APIs with Apollo Federation."
     path="/federation"
     cta="Learn about Apollo Federation"
   />
   <Docset
     icon={DOCSET_ICONS.router}
-    title="Host your own router"
+    title="Host your router"
     description="Deploy and configure your supergraph's router in your own infrastructure."
     path="/router"
     cta="Explore the Apollo Router"
@@ -85,14 +85,14 @@ Apollo provides tools and resources for every developer that interacts with Grap
   <Docset
     icon={DOCSET_ICONS['apollo-server']}
     title="Build a GraphQL API"
-    description="Build a production-ready GraphQL API in Node.js with Apollo Server. Fetch and combine results from multiple data sources."
+    description="Build a production-ready API that handles multiple datasources in Node.js with Apollo Server."
     path="/apollo-server"
     cta="Explore Apollo Server docs"
   />
   <Docset
     icon={DOCSET_ICONS.rover}
     title="Manage via CLI"
-    description="Manage, configure, and publish your GraphOS graphs and their schemas from the command line with the Rover CLI."
+    description="Manage, configure, and publish your GraphOS graphs from the command line with the Rover CLI."
     path="/rover"
     cta="Explore Rover CLI docs"
   />
@@ -110,7 +110,7 @@ Apollo provides tools and resources for every developer that interacts with Grap
 
 <h3> Join our community 💬 </h3>
 
-We love hearing from you! Here are a few ways you can connect with us and other Apollo community members.
+We love hearing from you! Here are a few ways to connect with us and other Apollo community members.
 
 <VStack pt="4" spacing="4" textAlign="center" maxW="md" mx="auto">
 
