Apply suggestions from code review

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Apollo documentation
+title: Documentation
 toc: true
 subtitle: ' '
 description: Learn how Apollo GraphQL can help enterprise architects, API implementers, and client developers build, deploy, and manage a supergraph of unified microservices, data sources, and applications.
@@ -54,7 +54,7 @@ Apollo provides tools and resources for every developer who interacts with Graph
     title="Combine APIs"
     description="Implement a single, unified supergraph that combines multiple APIs with Apollo Federation."
     path="/federation"
-    cta="Learn about Apollo Federation"
+    cta="Explore Apollo Federation docs"
   />
   <Docset
     icon={DOCSET_ICONS.router}
