--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -61,7 +61,7 @@ Apollo provides tools and resources for every developer who interacts with Graph
     title="Host your router"
     description="Deploy and configure your supergraph's router in your own infrastructure."
     path="/router"
-    cta="Explore the Apollo Router"
+    cta="Explore the Apollo Router docs"
   />
   <Docset
     icon={DOCSET_ICONS.technotes}
