--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -26,25 +26,21 @@ import {
 <DocsetGrid>
   <Docset
     icon={DOCSET_ICONS.graphql}
-    title="Benefits of GraphQL"
+    title="Ship features faster"
     description="Understand how GraphQL and Apollo can help you improve your organization's developer experience and ship features faster."
     path="/intro/benefits"
-    cta="Explore the benefits of GraphQL"
+    cta="Learn about GraphQL"
   />
   <Docset
     icon={DOCSET_ICONS.graphos}
-    title="Introducing GraphOS"
+    title="Operate at any scale"
     description="Connect any GraphQL API to Apollo's cloud platform to enable powerful features like schema governance and metrics reporting."
     path="/graphos"
     cta="Learn about GraphOS"
   />
 </DocsetGrid>
 
-Apollo provides tools and resources for every developer who interacts with GraphQL. That's whether you're just [starting with GraphQL](#for-graphql-newcomers), [moving your entire organization onto the supergraph](#for-enterprise-architects), [building your first API](#for-api-implementers), or [querying an existing one](#for-client-developers).
-
-## For GraphQL newcomers
-
-<Odyssey />
+Apollo provides tools and resources for every developer who interacts with GraphQL. That's whether you're just [starting with GraphQL](#for-graphql-newcomers), [building your first API](#for-api-implementers), [querying an existing one](#for-client-developers), or [moving your entire organization onto the supergraph](#for-enterprise-architects).
 
 ## For enterprise architects
 
@@ -68,14 +64,14 @@ Apollo provides tools and resources for every developer who interacts with Graph
     title="Learn from the field"
     description="Read in-depth articles on specialized Apollo topics from our own solutions architects."
     path="/technotes"
-    cta="Browse tech notes"
+    cta="Explore tech notes"
   />
   <Docset
     icon={DOCSET_ICONS.principled}
     title="Master principles"
     description="Learn about the fundamental principles that underlie Apollo's supergraph architecture."
     path="https://principledgraphql.com/"
-    cta="Visit Principled GraphQL"
+    cta="Explore PrincipledGraphQL.com"
   />
 </DocsetGrid>
 
@@ -107,6 +103,10 @@ Apollo provides tools and resources for every developer who interacts with Graph
   <Docset icon={DOCSET_ICONS['apollo-ios']} title="iOS" path="/ios" />
   <Docset icon={DOCSET_ICONS['apollo-kotlin']} title="Kotlin" path="/kotlin" />
 </DocsetGrid>
+
+## For GraphQL newcomers
+
+<Odyssey />
 
 <h3> Join our community 💬 </h3>
 
