change Apollo GraphOS Studio to GraphOS Studio to work around glossary issue

--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -564,7 +564,7 @@ To update a Lattice service's authorization policy with additional restrictions,
 
   <Note>
 
-  The Apollo account ID you specify in your authorization policy is _not_ the Apollo organization ID you can find in Apollo GraphOS Studio.
+  The Apollo account ID you specify in your authorization policy is _not_ the Apollo organization ID you can find in GraphOS Studio.
 
   </Note>
 
