Update GraphQL/GraphOS content

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -26,21 +26,21 @@ import {
 <DocsetGrid>
   <Docset
     icon={DOCSET_ICONS.graphql}
-    title="Ship features faster"
-    description="Understand how GraphQL and Apollo can help you improve your organization's developer experience and ship features faster."
+    title="Elevate the developer experience"
+    description="Understand how GraphQL and Apollo can help improve your organization's developer experience and ship features faster."
     path="/intro/benefits"
     cta="Learn about GraphQL"
   />
   <Docset
     icon={DOCSET_ICONS.graphos}
-    title="Operate at any scale"
-    description="Connect any GraphQL API to Apollo's cloud platform to enable powerful features like schema governance and metrics reporting."
+    title="Operate a GraphQL platform at any scale"
+    description="Connect any GraphQL API to Apollo's cloud platform to enable powerful features like collaborative schema development and governance, automated deployments, and field and operation-level observability."
     path="/graphos"
     cta="Learn about GraphOS"
   />
 </DocsetGrid>
 
-Apollo provides tools and resources for every developer who interacts with GraphQL. That's whether you're just [starting with GraphQL](#for-graphql-newcomers), [building your first API](#for-api-implementers), [querying an existing one](#for-client-developers), or [moving your entire organization onto the supergraph](#for-enterprise-architects).
+Apollo provides tools and resources for every developer who interacts with GraphQL. That's whether you're [building your first API](#for-api-implementers), [querying an existing one](#for-client-developers), or [moving your entire organization onto the supergraph](#for-enterprise-architects).
 
 ## For enterprise architects
 
@@ -103,10 +103,6 @@ Apollo provides tools and resources for every developer who interacts with Graph
   <Docset icon={DOCSET_ICONS['apollo-ios']} title="iOS" path="/ios" />
   <Docset icon={DOCSET_ICONS['apollo-kotlin']} title="Kotlin" path="/kotlin" />
 </DocsetGrid>
-
-## For GraphQL newcomers
-
-<Odyssey />
 
 <h3> Join our community 💬 </h3>
 
